# GMockSnippets

./: CMakeLists.txt
include/smart_device/: controller.h  device.h  types.h
src/: controller.cpp  controller.h
test/: CMakeLists.txt  controller_test.cpp  device_mock.h  device_stub.h
